# personal_ai_assistant

./: .gitignore  .pre-commit-config.yaml  README.md
backend/: pyproject.toml
backend/app/: config.py
backend/app/core/: database.py  redis.py  security.py
backend/tests/unit/: test_database.py  test_redis.py  test_security.py
docker/: README.md
