[project]
name = "personal-ai-assistant"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "pytest>=8.4.1",
    "ruff>=0.12.7",
]

[tool.ruff]
target-version = "py311"
line-length = 120
exclude = [
    ".git", ".ipynb_checkpoints", ".mypy_cache", ".pyenv", ".pytest_cache", ".ruff_cache",
    ".venv", "_pypackages_", ".idea", "_pycache_", "htmlcov", "dist", "alembic/", "tools/"
]
respect-gitignore = true

[tool.ruff.lint]
fixable = ["ALL"]
select = ["A", "E", "F", "W", "N", "B", "I001", "ERA001"]
ignore = ["B008"] # Avoid getting alerts when running callables as default for function parameters

[tool.ruff.lint.isort]
combine-as-imports = true
force-wrap-aliases = true
lines-after-imports = -1 # automatic setup
relative-imports-order = "closest-to-furthest"
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint.per-file-ignores]
"_init_.py" = ["F401", "N999"] # Module imported but not used
